Fix issue with dropdown menu z-index

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -29,6 +29,7 @@ ul {
   height: 100vh;
   width: 420px;
   background-color: #FFFFFF;
+  z-index: 2;
 }
 
 .hamburger-button {
@@ -101,6 +102,7 @@ ul {
   .navbar-links.active {
     display: flex;
     height: 100vh;
+    z-index: 0;
   }
 
   .jlm-logo {
@@ -114,6 +116,7 @@ ul {
     flex-direction: column;
     align-items: center;
     background-color: #FFFFFF;
+    z-index: 1;
   }
 
   #portfolioDropdownMenu a {
